--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ MESSAGE(STATUS "Released under the BSD 3-Clause License.")
 # Project definition
 COMPUTE_PROJECT_ARGS(PROJECT_ARGS LANGUAGES CXX)
 PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/find-external/CppAD/" ${CMAKE_MODULE_PATH})
 
 IF(BUILD_PYTHON_INTERFACE)
   ADD_PROJECT_DEPENDENCY(eigenpy 2.7.11 REQUIRED)
